<resources>
    <string name="app_name">Chung_Pike</string>
    <string name="add_reading_btn">Add Reading</string>
    <string name="list_readings_btn">List Readings</string>
    <string name="name_entry">Name:</string>
    <string name="add_title">Add a Reading</string>
    <string name="systolic_reading">Systolic reading</string>
    <string name="diastolic_reading">Diastolic reading</string>
    <string name="add_btn">Submit</string>
    <string name="back_btn">Back</string>
    <string name="accept_btn">Accept</string>
    <string name="crisis_notice">Hypertensive Crisis! Consult your doctor immediately!</string>
    <string name="monthly_average_btn">Month-to-Date Average Reading</string>
    <string name="update_btn">Update</string>
    <string name="update_title">Update Reading</string>
    <string name="delete_btn">Delete</string>
    <string name="monthly_username_label">Name:</string>
    <string name="monthly_systolic_label">Systolic Reading:</string>
    <string name="monthly_diastolic_label">Diastolic Reading:</string>
    <string name="monthly_condition_label">Average Condition:</string>
    <string name="monthly_readings_label">Month-to-date average readings for</string>
    <string name="monthly_get_btn">Get Report</string>
    <string name="monthly_spinner_label">Choose a name:</string>
    <string name="monthly_month_label">Choose a month:</string>
    <string name="monthly_year_label">Choose a year:</string>
    <string name="readingName">Name: </string>
    <string name="readingSystolic">Systolic Reading: </string>
    <string name="diastolicReading">Diastolic Reading: </string>
    <string name="readingCondition">Condition: </string>
    <string name="readingTitle">Readings</string>
</resources>
