<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddReadingActivity">

    <TextView
        android:id="@+id/update_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_title"/>

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_entry"/>

    <EditText
        android:id="@+id/systolic_reading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/systolic_reading"/>

    <EditText
        android:id="@+id/diastolic_reading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diastolic_reading"/>

    <Button
        android:id="@+id/submit_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"/>

</LinearLayout>