<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonthlyAverageActivity"
    style="@style/LayoutTheme"
    android:orientation="vertical">
    <TextView
        android:id="@+id/monthly_spinner_label"
        android:text="@string/monthly_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/monthly_name_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"/>
    <TextView
        android:id="@+id/monthly_month_label"
        android:text="@string/monthly_month_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/monthly_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"/>

    <TextView
        android:id="@+id/monthly_year_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monthly_year_label" />
    <Spinner
        android:id="@+id/monthly_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"/>

    <Button
        android:id="@+id/monthly_get_average_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monthly_get_btn"
        android:layout_marginBottom="@dimen/margin"/>

    <TextView
        android:id="@+id/monthly_readings_label"
        android:text="@string/monthly_readings_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/titleSize"
        />
    <TextView
        android:id="@+id/month_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titleSize"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:id="@+id/monthly_username_label"
            android:text="@string/monthly_username_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="0"/>
        <TextView
            android:id="@+id/monthly_username"
            android:text=""
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="0"/>
        <TextView
            android:id="@+id/monthly_systolic_label"
            android:text="@string/monthly_systolic_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="1"/>
        <TextView
            android:id="@+id/monthly_systolic"
            android:text=""
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="1"/>
        <TextView
            android:id="@+id/monthly_diastolic_label"
            android:text="@string/monthly_diastolic_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="2"/>
        <TextView
            android:id="@+id/monthly_diastolic"
            android:text=""
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="2"/>
        <TextView
            android:id="@+id/monthly_condition_label"
            android:text="@string/monthly_condition_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/monthly_condition"
            android:text=""
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="3"/>

    </GridLayout>

</LinearLayout>