<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    style="@style/LayoutTheme">


    <Button
        android:id="@+id/add_reading_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_reading_btn" />

    <Button
        android:id="@+id/list_readings_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/list_readings_btn" />

    <Button
        android:id="@+id/month_average_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monthly_average_btn" />

</LinearLayout>